--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=FinanceTracker
+server.port=8080
+
+# MySQL Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/finance_tracker
+spring.datasource.username=root
+spring.datasource.password=dinethdbpw
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+
